--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "A bundle of data collections in Typescript",
   "main": "dist/TypeData.js",
   "scripts": {
-    "prepublish": "tsc && dts-generator --name typedata --project . --out index.d.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prepublish": "tsc && dts-generator --name typedata --project . --out src/index.d.ts",
+    "test": "mocha --opts mocha.opts",
+    "test:auto": "mocha --opts mocha.opts --watch"
   },
   "repository": {
     "type": "git",
@@ -22,10 +23,15 @@
   "homepage": "https://github.com/auromota/typedata#readme",
   "dependencies": {
     "@types/lodash": "^4.14.36",
+    "@types/mocha": "^2.2.32",
     "dts-generator": "^1.7.0",
     "lodash": "^4.0.0"
   },
   "devDependencies": {
+    "@types/chai": "^3.4.34",
+    "chai": "^3.5.0",
+    "mocha": "^3.1.0",
+    "ts-node": "^1.3.0",
     "typescript": "^2.0.3"
   }
 }
