--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "typedata",
   "version": "0.0.1",
-  "description": "A bundle of data collections in Typescript",
+  "description": "A bundle of data collections in Typescript [under development]",
   "main": "dist/TypeData.js",
   "scripts": {
     "prepublish": "tsc && dts-generator --name typedata --project . --out src/index.d.ts",
