--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,12 +4,18 @@
 		"module": "commonjs",
 		"target": "es5",
 		"noImplicitAny": true,
-		"outDir": "lib/",
+		"outDir": "dist",
 		"strictNullChecks": true,
 		"noImplicitReturns": true,
-		"noFallthroughCasesInSwitch": true
+		"noFallthroughCasesInSwitch": true,
+		"typeRoots": [
+			"node_modules/@types"
+		],
+		"types": [
+			"@types/lodash"
+		]
 	},
 	"files": [
-		"src/index.ts"
+		"src/main.ts"
 	]
 }
