--- a/package.json
+++ b/package.json
@@ -2,12 +2,10 @@
   "name": "typedata",
   "version": "0.0.8-7",
   "description": "A bundle of data collections in TypeScript",
-  "main": "dist/main.js",
-  "typings": "dist/main.d.ts",
+  "main": "dist/index.js",
+  "typings": "./dist/index.d.ts",
   "scripts": {
-    "preinstall": "npm install autodts",
-    "postinstall": "autodts link",
-    "prepublish": "tsc && autodts generate",
+    "prepublish": "tsc",
     "test": "mocha --compilers tsx:ts-node/register --opts mocha.opts",
     "test:auto": "mocha --compilers tsx:ts-node/register --opts mocha.opts --watch"
   },
@@ -17,18 +15,14 @@
   },
   "author": "Auro Mota",
   "license": "MIT",
-  "typescript": {
-    "definition": "index.d.ts"
-  },
   "bugs": {
     "url": "https://github.com/auromota/typedata/issues"
   },
   "homepage": "https://github.com/auromota/typedata#readme",
   "dependencies": {
     "@types/lodash": "^4.14.36",
-    "@types/mocha": "^2.2.32",
-    "autodts": "0.0.6",
-    "lodash": "^4.0.0"
+    "lodash": "^4.0.0",
+    "typescript": "^2.0.3"
   },
   "keywords": [
     "data",
@@ -41,11 +35,10 @@
     "collections"
   ],
   "devDependencies": {
-    "@lib/autodts-generator": "0.0.2",
+    "@types/mocha": "^2.2.32",
     "@types/chai": "^3.4.34",
     "chai": "^3.5.0",
     "mocha": "^3.1.0",
-    "ts-node": "^1.3.0",
-    "typescript": "^2.0.3"
+    "ts-node": "^1.3.0"
   }
 }
