--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typedata",
-  "version": "0.0.8-10",
+  "version": "0.1.0",
   "description": "A bundle of data collections in TypeScript",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
