--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.2.0",
   "description": "A bundle of data collections in TypeScript",
   "main": "dist/index.js",
-  "typings": "dist/index.d.ts",
+  "module": "esm/index.js",
+  "typings": "esm/index.d.ts",
   "scripts": {
-    "prepublish": "tsc",
+    "prepublish": "tsc && tsc -p tsconfig.es2015.json",
     "test": "mocha --compilers tsx:ts-node/register --opts mocha.opts",
     "test:auto": "mocha --compilers tsx:ts-node/register --opts mocha.opts --watch"
   },
